tests/ui/enum_many_types_tuple.rs
#[cxx::bridge]
mod ffi {
    enum Bad {
        A(i32, bool),
        B(i32),
    }
}

fn main() {}
